--- a/src/components/Cta/style.css
+++ b/src/components/Cta/style.css
@@ -14,3 +14,15 @@
   left: -100px;
 
 }
+
+@media screen and (max-width: 1024px) {
+
+  .cta {
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    position: relative;
+  }
+  }
