--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,7 +1,5 @@
 .header {
   position: relative;
- 
-
 }
 .header h1 {
   font-size: 64px;
@@ -85,4 +83,34 @@
     #fde598
   );
   /* backdrop-filter: blur(5px); */
+}
+.layered{
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .header-left {
+    width: 100%;
+    margin: 10px;
+  }
+
+  .layer-1,.layer-2,.layer-3{
+    display: none;
+  }
+  .headerImg1{
+    width: 90%;
+  }
+  .header h1{
+    margin-top: 30px;
+    font-size: 46px;
+    width: 100%;
+  }
+  .header-btns{
+    flex-direction: column;
+    gap: 10px;
+  }
+  .layered{
+    width: 100%;
+    display: block;
+  }
 }
