--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family:"Oswald", sans-serif;
+  font-family: "Anton", sans-serif;
 }
