--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Anton", sans-serif;
+  font-family: 'Clash Grotesk', sans-serif;
+  
 }
