--- a/src/components/Testimonial/style.css
+++ b/src/components/Testimonial/style.css
@@ -37,20 +37,23 @@
     #fde598
   );
 }
-.users-imgs{
-    display: flex;
-    gap: 20px;
-    align-items: center;
+.users-imgs {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.test-img:hover {
+  transform: scale(1.05);
+  transition: 1s ease-in-out;
 }
 @media screen and (max-width: 1024px) {
-    .testimonial-main {
-      flex-direction: column;
-    }
-    .testimonial{
-        margin: 10px;
-    }
-    .test-img{
-        width: 100%;
-    }
+  .testimonial-main {
+    flex-direction: column;
   }
-  
+  .testimonial {
+    margin: 10px;
+  }
+  .test-img {
+    width: 100%;
+  }
+}
