added dark mode toggle

--- a/src/components/Copyright/style.css
+++ b/src/components/Copyright/style.css
@@ -1,5 +1,5 @@
 .copyright {
-  margin: 0 150px 50px;
+  margin: 0 150px ;
   text-align: center;
   border-top: 2px solid transparent;
   border-image: linear-gradient(90deg, #dddcdc, rgb(0, 0, 0), #dddcdc);
