--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,8 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 50px 150px 0px;
-  
+  margin: 0 150px;
+  padding-top: 30px;
 }
 .navbar-left {
   display: flex;
@@ -27,29 +27,38 @@
   font-size: 20px;
   cursor: pointer;
 }
-.navbar ul li:hover{
-    color: #FF5555;
-  }
-.hamburger{
-    display: none
+.navbar ul li:hover {
+  color: #ff5555;
 }
-  @media screen and (max-width: 1024px) {
-  .navbar ul{
+.hamburger {
+  display: none;
+}
+
+.theme-btn {
+  width: fit-content;
+  text-align: center;
+  padding: 10px;
+  position: absolute;
+  right: 10px;
+}
+@media screen and (max-width: 1024px) {
+  .navbar ul {
     display: none;
   }
   .navbar {
-    margin: 0 ;
+    margin: 0;
     padding: 10px;
   }
-  .download-btn{
+  .download-btn {
     display: none;
   }
-  .hamburger{
-    display: block
-}
-.navbar ul li:hover{
-  color: #FFFFFF;
-}
+  .hamburger {
+    display: block;
   }
-  
-  
+  .navbar ul li:hover {
+    color: #ffffff;
+  }
+  .theme-btn {
+    right: 100px;
+  }
+}
