--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -38,8 +38,12 @@
   width: fit-content;
   text-align: center;
   padding: 10px;
+  padding: 0;
   position: absolute;
-  right: 10px;
+  right: 30px;
+  background-color: transparent;
+  color: black;
+  
 }
 @media screen and (max-width: 1024px) {
   .navbar ul {
